@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: msline.h,v 1.2 2004/02/17 15:30:58 ela Exp $
+ * $Id: msline.h,v 1.3 2004/05/06 20:41:17 ela Exp $
  *
  */
 
@@ -30,6 +30,7 @@ class msline : public circuit
  public:
   msline ();
   void calcSP (nr_double_t);
+  nr_double_t analyseZ0 (nr_double_t, nr_double_t, nr_double_t);
 };
 
 #endif /* __MSLINE_H__ */
