@@ -1,3 +1,9 @@
+2004-05-06  Stefan Jahn  <stefan@lkcc.org>
+
+	* microstrip/msline.cpp (analyseZ0): Implemented a function
+	which calculates the impedance of a microstrip line based on
+	the lines and substrates geometry.
+
 2004-05-01  Stefan Jahn  <stefan@lkcc.org>
 
 	* diode.cpp: Improved convergence in backward region of
